alignment fixes (#121)
* alignment fixes

--- a/src/components/table/styles.css
+++ b/src/components/table/styles.css
@@ -172,9 +172,14 @@
   }
 }
 
-@media screen and (max-height: 1180px) and (max-width: 820px),
-  (max-width: 1180px) and (max-height: 820px) {
+@media screen and (max-width: 990px) {
   .table-component {
-    height: calc(100% - 79px);
+    height: calc(100vh - 190px);
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .table-component {
+    height: calc(100vh - 178px);
   }
 }
